Fix query invalidation, add signout, add modal component
